Make dark mode act better

--- a/css/screen.sass
+++ b/css/screen.sass
@@ -335,3 +335,8 @@ body.dark
         color: #c0d1ea
     h3
         color: #d6e3f5
+    #content
+        img
+            filter: hue-rotate(180deg) invert(1)
+        .sidebar a.active
+            color: #eee
