--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -2,14 +2,14 @@
 layout: default
 classes: guide
 ---
-<div class="sidebar">
+<div class="sidebar"><div><div>
     {% for entry in site.data[page.datafile].contents %}
         {% assign pp = site.data[page.datafile].path-prefix | append: entry.path %}
         {% if entry.separator %}<hr>
         {% else %}<a href="{{ entry.path }}"{% if page.path contains pp %} class="active"{% endif %}>{{ entry.name }}</a>
         {% endif %}
     {% endfor %}
-</div>
+</div></div></div>
 <div>
 <h1 id="-">{% if page.display %}{{ page.display }}{% else %}{{ page.title }}{% endif %}</h1>
 
