Initial writing section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
             <div class="wrapper linklist">
                 <a href="/" class="wordmark" title="homepage" alt="homepage">howto</a>
                 <a href="/networking/" title="networking" alt="networking"{% if page.path contains "networking/" %} class="active"{% endif %}>networking</a>
+                <a href="/writing/" title="writing" alt="writing"{% if page.path contains "writing/" %} class="active"{% endif %}>writing</a>
             </div>
         </nav>
         <div id="wrapper">
