--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <body class="{{ page.classes }} {{ layout.classes }}">
         <script>
             // enable dark mode
-            if (document.cookie == "darkmode=true") {
+            if (document.cookie.includes("darkmode=true")) {
                 document.body.classList.add("dark");
             }
         </script>
@@ -46,9 +46,9 @@
         function toggledarkmode() {
             document.body.classList.toggle("dark");
             if (document.body.classList.contains("dark")) {
-                document.cookie = "darkmode=true";
+                document.cookie = "darkmode=true; path=/";
             } else {
-                document.cookie = "darkmode=false";
+                document.cookie = "darkmode=false; path=/";
             }
         }
     </script>
