Slight look improvements

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
                 <a href="/writing/" title="writing" alt="writing" class="text-slate-100 py-0.5 {% if page.path contains "networking/" %}active{% endif %}">writing</a>
             </nav>
         </div>
-        <div class="wrapper pt-4 pb-6 rounded-b-lg bg-white dark:bg-slate-900">
+        <div class="wrapper pt-4 pb-6 rounded-b-xl bg-white dark:bg-slate-900 shadow-lg shadow-slate-300 dark:shadow-slate-900">
             {% include anchor_headings.html html=content anchorBody="#" anchorClass="anchor" %}
         </div>
         <footer class="sticky top-[100vh] wrapper text-center text-sm mt-2 mb-3">
