--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -10,7 +10,10 @@
 }
 
 .wrapper {
-    @apply mx-auto px-4 mx-auto max-w-[68rem];
+    @apply mx-auto px-4 mx-auto max-w-[57rem];
+}
+body.guide .wrapper {
+    @apply  max-w-[68rem];
 }
 
 a {
