--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -3,11 +3,11 @@ layout: default
 classes: guide
 ---
 <div class="flex gap-6">
-    <nav class="w-[11rem] flex-shrink-0 flex flex-col gap-3">
+    <nav class="w-[12rem] flex-shrink-0 flex flex-col items-stretch gap-2 bg-slate-50 border-slate-300 border-r-2 pt-7 pb-4 px-4 -mb-6 -ml-4 rounded-bl-xl -mt-4">
         {% for entry in site.data[page.datafile].contents %}
             {% assign pp = site.data[page.datafile].path-prefix | append: entry.path %}
-            {% if entry.separator %}<hr class="my-0">
-            {% else %}<a href="{{ entry.path }}" class="{% if page.path contains pp %}dark:text-slate-200{% endif %}">{{ entry.name }}</a>
+            {% if entry.separator %}<hr class="mt-3 mb-2 h-1">
+            {% else %}<a href="{{ entry.path }}" class="{% if entry.bold %}font-semibold{% endif %} {% if page.path contains pp %}opacity-40 text-slate-900 dark:text-slate-200{% endif %}">{{ entry.name }}</a>
             {% endif %}
         {% endfor %}
     </nav>
