Move to CC BY-SA 4.0

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             {% include anchor_headings.html html=content anchorBody="#" anchorClass="anchor" %}
         </div>
         <footer class="sticky top-[100vh] wrapper text-center text-sm mt-2 mb-3">
-            Written by <a href="https://github.com/DanielOaks">Daniel Oaks</a>, released under public domain CC0
+            Written by <a href="https://github.com/DanielOaks">Daniel Oaks</a>, released under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC Attribution-ShareAlike 4.0</a>
         </footer>
     </body>
     <script>
